@@ -3,6 +3,10 @@ import ApplicationRouteMixin from 'ember-simple-auth/mixins/application-route-mi
 
 export default Ember.Route.extend(ApplicationRouteMixin, {
 
+    title(tokens) {
+        return tokens.join(' - ') + ' - Backslash';
+    },
+
     model() {
 
         return Ember.RSVP.hash({
