@@ -4,6 +4,10 @@ import RefreshableRouteMixin from '../mixins/refreshable-route';
 
 export default Ember.Route.extend(AuthenticatedRouteMixin, RefreshableRouteMixin, {
 
+    titleToken(model) {
+        return `User ${model.get('email')}`;
+    },
+
     model: function(params) {
 
         return this.store.findRecord('user', params.email, {reload: true});
